# Project_Data_Science_team2

./: .gitignore  Dockerfile  Procfile  README.md  config.py  html_respons.py  html_response.py  main.py  model.py  pyproject.toml  requirements.txt  telegram_bot.py
model/: components.py  model.ipynb
static/: index.html
static/styles/: styles.css  styles1.css  styles2.css
tests/: test_components.py  test_main.py
